syntax = "proto3";

package employee_service.requests.device.get_device;

import "employee-service/models/device.proto";

option go_package = "github.com/nicodanke/gesty-api/shared/proto/employee-service/requests/device";

message GetDeviceRequest {
    int64 id = 1;
}

message GetDeviceResponse {
    employee_service.models.device.Device device = 1;
}
